test/spec_vectors/table_set/fail/module_2.wat
(module (table $t 10 externref) (func $type-index-empty-vs-i32 (table.set $t (ref.null extern))))